@@ -108,6 +108,13 @@ p {
     color: #ffffff;
 } */
 
+.benefit-lead h3,
+.benefit-brand h3,
+.benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 /*.benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -122,11 +129,15 @@ p {
     margin-bottom: 10px;
     text-align: center;
 } */
-h3 {
-    margin-bottom: 10px;
-    text-align: center;
+.benefit-lead img,
+.benefit-brand img,
+.benefit-cost img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
-.benefit-lead img {
+
+/* .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -142,9 +153,20 @@ h3 {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+} */
+
+#search-engine-optimization,
+#online-reputation-management,
+#social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
-#search-engine-optimization {
+/* #search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -169,9 +191,15 @@ h3 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+} */
+
+#search-engine-optimization img,
+#online-reputation-management img,
+#social-media-marketing img {
+    max-height: 200px;
 }
 
-#search-engine-optimization img {
+/* #search-engine-optimization img {
     max-height: 200px;
 }
 
@@ -181,9 +209,16 @@ h3 {
 
 #social-media-marketing img {
     max-height: 200px;
+} */
+
+#search-engine-optimization h2,
+#online-reputation-management h2,
+#social-media-marketing h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
-#search-engine-optimization h2 {
+/* #search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -196,7 +231,7 @@ h3 {
 #social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+} */
 
 .footer {
     padding: 30px;
