@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Social Solution Services</title>
+    <title>Horiseon Social Solution Services, Inc</title>
 </head>
 
 <body>
